# warboy-vision-models

./: .gitignore  .pre-commit-config.yaml  HowToUseWarboyFromStartToFinish.ipynb  HowToUseWarboyVisionModels.ipynb  LICENSE.md  README.md  build.sh  coco2017.sh  colorization_web.py  demo.py  demo.yaml  demo_videos.sh  export_onnx.py  furiosa_demo.py  furiosa_quantizer.py  furiosa_stream.py  performance_graph.py  pyproject.toml  requirements.txt  runner.py  setup.py  test.py  test.yaml  test2.py  warboy_demo.py  warboy_inference.py  web_demo.py  yolov8n.yaml
cfg/: demo.yaml  demo_config.yaml  detection_config.yaml  face_model_config.yaml  instance_seg_config.yaml  instance_segmentation_model.yaml  model_config.yaml  object_detection_model.yaml  pose_config.yaml  pose_estimation_model.yaml
cli/: main.py
data/: detection_graph.py  graph_fusion_det.py  graph_fusion_pose.py  graph_fusion_seg.py  graph_single_det.py  graph_single_pose.py  graph_single_seg.py  pose_graph.py  segmentation_graph.py
data/graph/: graph_fusion_det.py  graph_fusion_seg.py  graph_single_det.py  graph_single_seg.py
demo/: demo.py
evals/e2e/: test_face_recognition.py  test_instance_seg.py  test_npu_performance.py  test_object_det.py  test_pose_est.py
model_utils/: __init__.py  extractor.py  object_detection_models.py  pose_estimation_models.py
notebooks/: HowToUseWarboyFromStartToFinish.ipynb  HowToUseWarboyVisionModels.ipynb  demo.yaml
src/cli/: main.py
src/demo/: demo.py  viewer.py
src/test_scenarios/: utils.py
src/warboy/: __init__.py  viewer.py  warboy_api.py
templates/: index.html
test_codes/: test_acc.py  test_make_model.py  test_npu.py
tests/: performance_test.py  test_acc.py  test_model_convert.py  test_npu.py  utils.py
tests/accuracy/: test_object_det.py
tests/e2e/: test_face_recognition.py  test_instance_seg.py  test_npu_performance.py  test_object_det.py  test_performance.py  test_pose_est.py
tests/performance/: performance_test.py
tests/test_config/: __init__.py
tools/: export_onnx.py  furiosa_demo.py  furiosa_quantizer.py  furiosa_stream.py  stream.py  test.py
tools/model_utils/: __init__.py  extractor.py  instance_seg_models.py  object_detection_models.py  pose_estimation_models.py
tutorials/: HowToUseWarboyFromStartToFinish.ipynb  HowToUseWarboyVisionModels.ipynb
tutorials/cfg/: demo.yaml  yolov8n.yaml
tutorials/notebooks/: HowToUseWarboyFromStartToFinish.ipynb  HowToUseWarboyFromStartToFinish_EN.ipynb  HowToUseWarboyFromStartToFinish_KO.ipynb  HowToUseWarboyVisionModels.ipynb  HowToUseWarboyVisionModels_EN.ipynb  HowToUseWarboyVisionModels_KO.ipynb
utils/: handler.py  info.py  mp_queue.py  parse_conifg.py  parse_params.py  postprocess.py  preprocess.py  result_img_process.py  warboy.py  warboy_runner.py
utils/postprocess_func/tracking/cbytetrack/: CMakeLists.txt  cbytetrack_wrapper.py
utils/postprocess_func/tracking/cbytetrack/include/: lapjv.h
utils/postprocess_func/tracking/cbytetrack/src/: BYTETracker.cpp  STrack.cpp  pythonBinding.cpp  utils.cpp
utils_/: handler.py  mp_queue.py  parse_params.py  postprocess.py  preprocess.py  warboy_runner.py
video_utils/: output_proc.py  video_proc.py  viewer.py
warboy/: __init__.py  viewer.py  viewer.py~~  warboy_api.py
warboy_vision_models/: test_acc.py  test_make_model.py  test_npu.py
(+215 files in other folders)
