[project]
name = "warboy_vision_models"
version = "0.1.0"
description = "CLI for running model project tasks"
authors = [{name = "Jisoo Lee", email = "jisoo.lee@furiosa.ai"}, {name = "Hayeong Lee", email = "hayeong.lee@furiosa.ai"}]
dependencies = [
    "typer[all]"
]

[project.scripts]
warboy-vision = "cli.main:app"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["*"]

[tool.setuptools.package-data]
"warboy.yolo.cbox_decode" = ["*.so"]
"warboy.yolo.cpose_decode" = ["*.so"]
"warboy.yolo.tracking.cbytetrack.build" = ["*.so"]
