[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warboy-vision-models"
version = "0.1.0"
authors = [
    { name = "Furiosa AI"}
]
description = "Vision Models Ported to Warboy"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click",
]

[project.scripts]
warboy-vision = "src.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/warboy/yolo/cbox_decode/cbox_decode.so" = "src/warboy/yolo/cbox_decode/cbox_decode.so"
"src/warboy/yolo/cpose_decode/cpose_decode.so" = "src/warboy/yolo/cpose_decode/cpose_decode.so"
"src/warboy/yolo/tracking/cbytetrack/build/libbytetrack.so" = "src/warboy/yolo/tracking/cbytetrack/build/libbytetrack.so"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
    /(
        \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | __pycache__
    )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
